--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.man
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.man
@@ -2,16 +2,17 @@
 <instrumentationManifest xsi:schemaLocation="http://schemas.microsoft.com/win/2004/08/events eventman.xsd" xmlns="http://schemas.microsoft.com/win/2004/08/events" xmlns:win="http://manifests.microsoft.com/win/2004/08/windows/events" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:trace="http://schemas.microsoft.com/win/2004/08/events/trace">
 	<instrumentation>
 		<events>
-			<provider name="LolaCommsNative" guid="{8EB119A9-2FE5-46F5-998B-A396CA3F74B7}" symbol="LolaCommsNative" resourceFileName="LolaCommsNative.dll" messageFileName="LolaCommsNative.dll">
+			<provider name="LolaCommsNative" guid="{8EB119A9-2FE5-46F5-998B-A396CA3F74B7}" symbol="LolaCommsNative" resourceFileName="LolaCommsNative" messageFileName="LolaCommsNative">
 				<events>
-					<event symbol="OnConnectionOpened" value="1" version="1" level="Default" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
-					<event symbol="OnConnectionClosed" value="2" version="1" level="Default" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
-					<event symbol="OnConnectionError" value="3" version="1" template="ConnectionStateChanged"></event>
-					<event symbol="OnObstacleMessageReceived" value="4" version="1" level="Default" template="ObstacleMessage"></event>
+					<event symbol="OnConnectionOpened" value="1" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
+					<event symbol="OnConnectionClosed" value="2" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
+					<event symbol="OnConnectionError" value="3" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
+					<event symbol="OnObstacleMessageReceived" value="4" version="1" level="win:LogAlways" template="ObstacleMessage"></event>
 				</events>
-				<levels>
-					<level name="Default" symbol="Default" value="16"></level>
-				</levels>
+				<levels></levels>
+				<channels>
+					<importChannel name="Application" chid="Application"></importChannel>
+				</channels>
 				<templates>
 					<template tid="ConnectionStateChanged">
 						<data name="hostname" inType="win:UnicodeString" outType="xs:string"></data>
@@ -32,6 +33,8 @@
 	<localization>
 		<resources culture="en-US">
 			<stringTable>
+				<string id="level.LogAlways" value="Log Always"></string>
+				<string id="channel.Application" value="Application"></string>
 				<string id="LolaCommsNative.event.2.message" value="Connection Closed"></string>
 				<string id="LolaCommsNative.event.1.message" value="New Connection"></string>
 			</stringTable>
