--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.man
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.man
@@ -2,18 +2,26 @@
 <instrumentationManifest xsi:schemaLocation="http://schemas.microsoft.com/win/2004/08/events eventman.xsd" xmlns="http://schemas.microsoft.com/win/2004/08/events" xmlns:win="http://manifests.microsoft.com/win/2004/08/windows/events" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:trace="http://schemas.microsoft.com/win/2004/08/events/trace">
 	<instrumentation>
 		<events>
-			<provider name="LolaCommsNative" guid="{8EB119A9-2FE5-46F5-998B-A396CA3F74B7}" symbol="LolaCommsNative" resourceFileName="LolaCommsNative" messageFileName="LolaCommsNative">
+			<provider name="LolaCommsNative" guid="{8EB119A9-2FE5-46F5-998B-A396CA3F74B7}" symbol="LolaCommsNative" resourceFileName="C:\Data\Users\DefaultAccount\AppData\Local\DevelopmentFiles\HoLolaVS.Debug_x86.b\LolaCommsNative.dll" messageFileName="C:\Data\Users\DefaultAccount\AppData\Local\DevelopmentFiles\HoLolaVS.Debug_x86.b\LolaCommsNative.dll">
 				<events>
 					<event symbol="OnConnectionOpened" value="1" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
 					<event symbol="OnConnectionClosed" value="2" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
 					<event symbol="OnConnectionError" value="3" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
-					<event symbol="OnObstacleMessageReceived" value="4" version="1" level="win:LogAlways" template="ObstacleMessage"></event>
+                    <event symbol="OnVisionMessageReceived" value="4" version="1" level="win:LogAlways" template="StrInfo"></event>
+					<event symbol="OnObstacleMessageReceived" value="5" version="1" level="win:LogAlways" template="ObstacleMessage"></event>
+                    <event symbol="OnSurfaceMessageReceived" value="6" version="1" level="win:LogAlways" template="StrInfo"></event>
+                    <event symbol="OnRGBImageMessageReceived" value="7" version="1" level="win:LogAlways" template="StrInfo"></event>
+                    <event symbol="OnPointCloudMessageReceived" value="8" version="1" level="win:LogAlways" template="StrInfo"></event>
+                    <event symbol="OnUnknownVisionMessageReceived" value="9" version="1" level="win:LogAlways" template="StrInfo"></event>
 				</events>
 				<levels></levels>
 				<channels>
 					<importChannel name="Application" chid="Application"></importChannel>
 				</channels>
 				<templates>
+                    <template tid="StrInfo">
+                        <data name="info" inType="win:UnicodeString" outType="xs:string"></data>
+                    </template>
 					<template tid="ConnectionStateChanged">
 						<data name="hostname" inType="win:UnicodeString" outType="xs:string"></data>
 					</template>
