--- a/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.man
+++ b/net/LolaCommsNative/LolaCommsNative/LolaCommsNative.man
@@ -1,51 +1,68 @@
 <?xml version="1.0"?>
 <instrumentationManifest xsi:schemaLocation="http://schemas.microsoft.com/win/2004/08/events eventman.xsd" xmlns="http://schemas.microsoft.com/win/2004/08/events" xmlns:win="http://manifests.microsoft.com/win/2004/08/windows/events" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:trace="http://schemas.microsoft.com/win/2004/08/events/trace">
-	<instrumentation>
-		<events>
-			<provider name="LolaCommsNative" guid="{8EB119A9-2FE5-46F5-998B-A396CA3F74B7}" symbol="LolaCommsNative" resourceFileName="C:\Data\Users\DefaultAccount\AppData\Local\DevelopmentFiles\HoLolaVS.Debug_x86.b\LolaCommsNative.dll" messageFileName="C:\Data\Users\DefaultAccount\AppData\Local\DevelopmentFiles\HoLolaVS.Debug_x86.b\LolaCommsNative.dll">
-				<events>
-					<event symbol="OnConnectionOpened" value="1" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
-					<event symbol="OnConnectionClosed" value="2" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
-					<event symbol="OnConnectionError" value="3" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
-                    <event symbol="OnVisionMessageReceived" value="4" version="1" level="win:LogAlways" template="StrInfo"></event>
-					<event symbol="OnObstacleMessageReceived" value="5" version="1" level="win:LogAlways" template="ObstacleMessage"></event>
-                    <event symbol="OnSurfaceMessageReceived" value="6" version="1" level="win:LogAlways" template="StrInfo"></event>
-                    <event symbol="OnRGBImageMessageReceived" value="7" version="1" level="win:LogAlways" template="StrInfo"></event>
-                    <event symbol="OnPointCloudMessageReceived" value="8" version="1" level="win:LogAlways" template="StrInfo"></event>
-                    <event symbol="OnUnknownVisionMessageReceived" value="9" version="1" level="win:LogAlways" template="StrInfo"></event>
-				</events>
-				<levels></levels>
-				<channels>
-					<importChannel name="Application" chid="Application"></importChannel>
-				</channels>
-				<templates>
-                    <template tid="StrInfo">
-                        <data name="info" inType="win:UnicodeString" outType="xs:string"></data>
-                    </template>
-					<template tid="ConnectionStateChanged">
-						<data name="hostname" inType="win:UnicodeString" outType="xs:string"></data>
-					</template>
-					<template tid="ObstacleMessage">
-						<data name="type" inType="win:Int32" outType="xs:int"></data>
-						<data name="model_id" inType="win:UInt32" outType="xs:unsignedInt"></data>
-						<data name="part_id" inType="win:UInt32" outType="xs:unsignedInt"></data>
-						<data name="action" inType="win:UInt32" outType="win:HexInt32"></data>
-						<data name="radius" inType="win:Float" outType="xs:float"></data>
-						<data name="surface" inType="win:Int32" outType="xs:int"></data>
-						<data name="coeffs" inType="win:Float" outType="xs:float" count="9"></data>
-					</template>
-				</templates>
-			</provider>
-		</events>
-	</instrumentation>
-	<localization>
-		<resources culture="en-US">
-			<stringTable>
-				<string id="level.LogAlways" value="Log Always"></string>
-				<string id="channel.Application" value="Application"></string>
-				<string id="LolaCommsNative.event.2.message" value="Connection Closed"></string>
-				<string id="LolaCommsNative.event.1.message" value="New Connection"></string>
-			</stringTable>
-		</resources>
-	</localization>
+  <instrumentation>
+    <events>
+      <provider name="LolaCommsNative" guid="{8EB119A9-2FE5-46F5-998B-A396CA3F74B7}" symbol="LolaCommsNative" resourceFileName="LolaCommsNative.dll" messageFileName="LolaCommsNative.dll">
+        <events>
+          <!-- General (not context-specific events): 0xx range -->
+
+          <!-- Vision-related events: 1xx range -->
+          <event symbol="Vision_OnConnectionOpened"               value="101" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
+          <event symbol="Vision_OnConnectionClosed"               value="102" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
+          <event symbol="Vision_OnConnectionError"                value="103" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
+          <event symbol="Vision_OnVisionMessageReceived"          value="104" version="1" level="win:LogAlways" template="StrInfo"></event>
+          <event symbol="Vision_OnObstacleMessageReceived"        value="105" version="1" level="win:LogAlways" template="ObstacleMessage"></event>
+          <event symbol="Vision_OnSurfaceMessageReceived"         value="106" version="1" level="win:LogAlways" template="StrInfo"></event>
+          <event symbol="Vision_OnRGBImageMessageReceived"        value="107" version="1" level="win:LogAlways" template="StrInfo"></event>
+          <event symbol="Vision_OnPointCloudMessageReceived"      value="108" version="1" level="win:LogAlways" template="StrInfo"></event>
+          <event symbol="Vision_OnUnknownVisionMessageReceived"   value="109" version="1" level="win:LogAlways" template="StrInfo"></event>
+
+          <!-- Pose-related events: 2xx range -->
+          <event symbol="Pose_OnConnectionOpened"                 value="201" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
+          <event symbol="Pose_OnConnectionClosed"                 value="202" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
+          <event symbol="Pose_OnConnectionError"                  value="203" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
+          <event symbol="Pose_OnPoseMessageReceived"              value="204" version="1" level="win:LogAlways" template="StrInfo"></event>
+
+          <!-- Footstep-related events: 3xx range -->
+          <event symbol="Footsteps_OnConnectionOpened"            value="301" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.1.message)"></event>
+          <event symbol="Footsteps_OnConnectionClosed"            value="302" version="1" level="win:LogAlways" template="ConnectionStateChanged" message="$(string.LolaCommsNative.event.2.message)"></event>
+          <event symbol="Footsteps_OnConnectionError"             value="303" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
+          <event symbol="Footsteps_OnConnectionHandshakeComplete" value="304" version="1" level="win:LogAlways" template="ConnectionStateChanged"></event>
+          <event symbol="Footsteps_OnFootstepMessageReceived"     value="305" version="1" level="win:LogAlways" template="StrInfo"></event>
+          <event symbol="Footsteps_OnOtherMessageReceived"        value="306" version="1" level="win:LogAlways" template="StrInfo"></event>
+        </events>
+        <levels></levels>
+        <channels>
+          <importChannel name="Application" chid="Application"></importChannel>
+        </channels>
+        <templates>
+            <template tid="StrInfo">
+                <data name="info" inType="win:UnicodeString" outType="xs:string"></data>
+            </template>
+            <template tid="ConnectionStateChanged">
+              <data name="hostname" inType="win:UnicodeString" outType="xs:string"></data>
+            </template>
+            <template tid="ObstacleMessage">
+              <data name="type" inType="win:Int32" outType="xs:int"></data>
+              <data name="model_id" inType="win:UInt32" outType="xs:unsignedInt"></data>
+              <data name="part_id" inType="win:UInt32" outType="xs:unsignedInt"></data>
+              <data name="action" inType="win:UInt32" outType="win:HexInt32"></data>
+              <data name="radius" inType="win:Float" outType="xs:float"></data>
+              <data name="surface" inType="win:Int32" outType="xs:int"></data>
+              <data name="coeffs" inType="win:Float" outType="xs:float" count="9"></data>
+            </template>
+          </templates>
+      </provider>
+    </events>
+  </instrumentation>
+  <localization>
+    <resources culture="en-US">
+      <stringTable>
+        <string id="level.LogAlways" value="Log Always"></string>
+        <string id="channel.Application" value="Application"></string>
+        <string id="LolaCommsNative.event.2.message" value="Connection Closed"></string>
+        <string id="LolaCommsNative.event.1.message" value="New Connection"></string>
+      </stringTable>
+    </resources>
+  </localization>
 </instrumentationManifest>
